--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # H2 Database
-# spring.datasource.url=jdbc:h2:mem:project-web-system
+# spring.datasource.url=jdbc:h2:mem:hyperprof
 # spring.datasource.driver-class-name=org.h2.Driver
 # spring.datasource.username=sa
 # spring.datasource.password=123
