--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,15 +1,11 @@
+server:
+  port: ${HYPERPROF_PORT}
 spring:
   datasource:
     username: ${HYPERPROF_DB_USER}
     password: ${HYPERPROF_DB_PASSWORD}
-    url: jdbc:h2:mem:${HYPERPROF_DB_NAME}
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://${HYPERPROF_DB_HOST}:${HYPERPROF_DB_PORT}/${HYPERPROF_DB_NAME}?serverTimezone=UTC
   jpa:
     show-sql: false
-    database-plataform: org.hibernate.dialect.H2Dialect
     properties:
-      "hibernate.format_sql": false
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+      "[format_sql]": false
