--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,4 +6,5 @@ spring:
   jpa:
     show-sql: true
     properties:
-      "hibernate.format_sql": true
+      hibernate:
+        "[format_sql]": true
